2003-04-25  Miguel de Icaza  <miguel@ximian.com>

        * SystemInformation.cs (ComputerName): Bug fix: we need to trim down the size

2003-05-30  Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* GroupBox.cs : take BackColor into account

2003-05-27  Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* Control.cs : helper method getParentForm
	* Form.cs : ActiveForm , FormBorderStyle implemented
	* GroupBox.cs : some chages in drawing code, don't register another window class
	* FormBorderStyle.cs : fixed typo
	* win32functions.cs : UpdateWindowExStyle added, new prototypes for GetActiveWindow, GetForegroundWindow

2003-05-27  Aleksey Ryabchuk <ryabchuk@yahoo.com>
        * Button.cs
	* CheckBox.cs
	* CheckedListBox.cs
	* ComboBox.cs
	* HScrollBar.cs
	* ListBox.cs
	* ListView.cs
	* PrintPreviewControl.cs
	* RichTextBox.cs
	* ScrollBar.cs
	* Splitter.cs
	* ToolBar.cs
	* TreeView.cs
	* VScrollBar.cs : changed to use base implementation of CreateParams

2003-05-27  Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* Control.cs : implemented GetChildIndex, BringToFront, UpdateZOrder, update z-order when recreating handle,
	* win32Strcuts.cs
	* win32Enums.cs : use ansi CharSet for tooltips
			
2003-05-27  Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* Contols.cs : changes to SetVisibleCore, Invalidate (bool) is implemented
	* NativeWindow.cs : don't use CS_VREDRAW and CS_HREDRAW flags
	* ImageList.cs
	* ImageListStreamer.cs : small fixes
	* TabControl.cs
	* TabPage.cs : image list support was added

2003-05-26  Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* ImageListStreamer.cs: added deserialization code
	* win32functions.cs : added some prototypes required for ImageList impl.
	* win32strcuts.cs : added new structs, switched to CharSet.Ansi for TCITEM struct
	* win32Enums.cs : use ansi messages for tab control

2003-05-20  Aleksey Ryabchuk <ryabchuk@yahoo.com>
	* win32functions.cs  
	* NativeWindow.cs : fixed some issues causing problems when running SWF on Linux 
