@@ -1,3 +1,9 @@
+2003-06-02 Alexandre Pigolkine <pigolkine@gmx.de>
+	* Application.cs
+	* ComboBox.cs
+	* Control.cs
+				change to ContainsFocus/Focused properties
+			
 2003-04-25  Miguel de Icaza  <miguel@ximian.com>
 
         * SystemInformation.cs (ComputerName): Bug fix: we need to trim down the size
